--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="windows-1251">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All jobs (PSIP)</title>
     <style>
@@ -70,18 +70,18 @@
 </head>
 <body>
     <div class="buttons-container">
-        <a href="134/index.html" class="button">Лабораторная работа №1-4</a>
-        <a href="5/index.html" class="button">Лабораторная работа №5</a>
-        <a href="6/index1.html" class="button">Лабораторная работа №6</a>
-        <a href="7/Адаптивная/index1.html" class="button">Лабораторная работа №7</a>
-        <a href="8/index.html" class="button">Лабораторная работа №8</a>
-        <a href="9/Проект/index.html" class="button">Лабораторная работа №9</a>
-        <a href="101112/index.html" class="button">Лабораторная работа №10-11-12</a>
-        <a href="1314/index.html" class="button">Лабораторная работа №13-14</a>
+        <a href="134/index.html" class="button">Г‹Г ГЎГ®Г°Г ГІГ®Г°Г­Г Гї Г°Г ГЎГ®ГІГ  В№1-4</a>
+        <a href="5/index.html" class="button">Г‹Г ГЎГ®Г°Г ГІГ®Г°Г­Г Гї Г°Г ГЎГ®ГІГ  В№5</a>
+        <a href="6/index1.html" class="button">Г‹Г ГЎГ®Г°Г ГІГ®Г°Г­Г Гї Г°Г ГЎГ®ГІГ  В№6</a>
+        <a href="7/ГЂГ¤Г ГЇГІГЁГўГ­Г Гї/index1.html" class="button">Г‹Г ГЎГ®Г°Г ГІГ®Г°Г­Г Гї Г°Г ГЎГ®ГІГ  В№7</a>
+        <a href="8/index.html" class="button">Г‹Г ГЎГ®Г°Г ГІГ®Г°Г­Г Гї Г°Г ГЎГ®ГІГ  В№8</a>
+        <a href="9/ГЏГ°Г®ГҐГЄГІ/index.html" class="button">Г‹Г ГЎГ®Г°Г ГІГ®Г°Г­Г Гї Г°Г ГЎГ®ГІГ  В№9</a>
+        <a href="101112/index.html" class="button">Г‹Г ГЎГ®Г°Г ГІГ®Г°Г­Г Гї Г°Г ГЎГ®ГІГ  В№10-11-12</a>
+        <a href="1314/index.html" class="button">Г‹Г ГЎГ®Г°Г ГІГ®Г°Г­Г Гї Г°Г ГЎГ®ГІГ  В№13-14</a>
     </div>
 
     <div class="header">
-        <h1>Работы выполненные Исаченко Максимом Андреевичем</h1>
+        <h1>ГђГ ГЎГ®ГІГ» ГўГ»ГЇГ®Г«Г­ГҐГ­Г­Г»ГҐ Г€Г±Г Г·ГҐГ­ГЄГ® ГЊГ ГЄГ±ГЁГ¬Г®Г¬ ГЂГ­Г¤Г°ГҐГҐГўГЁГ·ГҐГ¬</h1>
     </div>
 
     <script>
